--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -21,10 +21,10 @@
 
 // 4 - LAYOUT
 @import '4-layout/nav'
+@import '4-layout/features'
 
 
 // 5 - MODULES
-@import '5-modules/flex-video'
 
 
 // 6 - PAGES
