--- a/source/sass/4-layout/_features.sass
+++ b/source/sass/4-layout/_features.sass
@@ -8,7 +8,7 @@
     bottom: 0
     position: absolute
     background: inherit
-    content: " "
+    content: ' '
     height: 100%
     left: 0
     right: 0
