--- a/source/sass/main.sass
+++ b/source/sass/main.sass
@@ -20,8 +20,11 @@
 
 
 // 4 - LAYOUT
+@import '4-layout/discount'
 @import '4-layout/nav'
 @import '4-layout/features'
+@import '4-layout/download'
+
 
 
 // 5 - MODULES
