--- a/source/sass/4-layout/_download.sass
+++ b/source/sass/4-layout/_download.sass
@@ -1,4 +1,34 @@
 #download
-  background: $purple
+  background: url("../img/downloadBackground.jpg") no-repeat
+  background-size: cover
+  color: white
+  text-align: center
   padding: 100px 0
   margin-top: -70px
+  h2 
+    font-size: 60px
+    line-height: 1.05
+    text-transform: uppercase
+    font-weight: 900
+    color: white
+    margin: 0 20px
+  p 
+    wdith: 100%
+    max-width: 450px
+    margin: 20px auto
+    font-weight: 900
+  
+  .button
+    position: relative
+    width: 200px
+    margin: 0 15px
+  
+  .apple:before, .google:before
+    position: absolute
+    display: block
+    left: 20px
+    top: 20px  
+  .apple:before
+    content: url("../img/appleicon.png")
+  .google:before
+    content: url("../img/playicon.png")
