--- a/source/sass/4-layout/_features.sass
+++ b/source/sass/4-layout/_features.sass
@@ -4,6 +4,8 @@
   text-align: center
   height: 500px
   position: relative
+  @media only screen and (max-width: 680px)
+     height: auto
   &:after
     bottom: 0
     position: absolute
@@ -25,6 +27,9 @@ h2
   display: grid
   grid-template-columns: repeat(3,auto)
   grid-gap: 30px
+  
+  @media only screen and (max-width: 680px)
+     grid-template-columns: repeat(1,auto)
 
 .featurecard
   background: white
