--- a/source/sass/3-basics/_base.sass
+++ b/source/sass/3-basics/_base.sass
@@ -25,6 +25,10 @@ body
   max-width: 1100px
   margin: 0 auto
 
+  @media only screen and (max-width: 1000px)
+     width: 90%
+  
+
 
 section
   display: -webkit-box
