--- a/source/sass/4-layout/_discount.sass
+++ b/source/sass/4-layout/_discount.sass
@@ -6,8 +6,21 @@
   align-items: center
   justify-content: center
 
+  @media only screen and (max-width: 680px)
+     display: block
+
+  img
+    @media only screen and (max-width: 680px)
+      width: 100%
+      max-width: 400px
+
   .offer
+    width: 40%
     margin: 0 auto
+
+    @media only screen and (max-width: 680px)
+      width: 100%
+      text-align: center
   h2
     margin: 0 auto
   .offer .button
